    interrupt safe.
  * bug fix: GC race condition occasionally resulting in crashes with
    the error message "SIG_STOP_FOR_GC blocked at a bad place" has been
    fixed.
  * bug fix: &ENVIRONMENT variables in macro lambda lists can now be
    declared ignored.
  * bug fix: DEFSETF lambda lists without &ENVIRONMENT no longer cause
    a STYLE-WARNING to be signalled (regression from 1.0.4.)

changes in sbcl-1.0.5 relative to sbcl-1.0.4:
  * incompatible change: removed writer methods for host-ent-name,
    host-ent-addresses -- changing the values did not update the DNS
    information anyway.
  * minor incompatible change: changed experimental JOIN-THREAD interface
  * documentation: the manual now lists reader and writer methods
    in class slot documentation sections. (thanks to Richard M Kreuter)
  * documentation: unwinding from asyncronous events has been
    documented as unsafe.
  * documentation: SB-SYS:WITHOUT-GCING has been documented as unsafe
    in multithreaded application code.
  * optimization: GET-INTERNAL-REAL-TIME has been optimized on POSIX
    platforms. (thanks to James Anderson for the optimization hint)
  * optimization: REPLACE, SUBSEQ, and COPY-SEQ are now optimized in
    more cases.
  * optimization: STRING-{EQUAL,LESSP,GREATER-P} and their NOT-
    variants no longer cons.
  * optimization: Direct calls to CHAR-{EQUAL,LESSP,GREATERP} and
    their NOT- variants no longer cons.
  * optimization: EQUAL hash tables no longer use SXHASH for objects
    of all data types, but instead use an EQL hash for types for which
    EQUAL is the same as EQL.
  * optimization: the non-inlined generic versions of AREF and (SETF AREF)
    are significantly faster.
  * optimization: new STRING-OUTPUT-STREAM implementation is much
    faster for large outputs and conses 30% less on average.
  * enhancement: XREF information is now collected for references made
    to global variables using SYMBOL-VALUE and a constant argument.